--- a/package.json
+++ b/package.json
@@ -1,8 +1,31 @@
 {
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
+  "scripts": {
+    "prisma:studio": "prisma studio",
+    "prisma:generate": "prisma generate",
+    "prisma:seed": "prisma db seed",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "devDependencies": {
-    "prisma": "^6.14.0"
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.11",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "prisma": "^6.14.0",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@prisma/client": "^6.14.0"
+    "@prisma/client": "^6.14.0",
+    "next": "^14.2.32",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zod": "^4.1.3"
   }
 }
