--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "plugins": [{ "name": "next" }],
     "baseUrl": "src",
     "paths": { "@/*": ["*"] },
-    "types": ["node"]
+    "types": ["node"],
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "postcss.config.js"],
   "exclude": ["node_modules"]
